[gd_scene load_steps=33 format=3 uid="uid://37h321ji7woy"]

[ext_resource type="Script" path="res://objects/skeletonCharacter.gd" id="1_esgbh"]
[ext_resource type="Texture2D" uid="uid://ce1pb7f6ipo3r" path="res://textures/Skeleton enemy/Skeleton enemy.png" id="1_fxeo2"]
[ext_resource type="Script" path="res://objects/Damageable.gd" id="2_co88d"]
[ext_resource type="Script" path="res://objects/MaceArea2D.gd" id="4_n57gc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6met"]
size = Vector2(23, 33)

[sub_resource type="Animation" id="Animation_o3l7u"]
resource_name = "attack_left"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MaceArea2D:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_nou1p"]
resource_name = "dead_alive"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36, 0.48, 0.6, 0.72, 0.84, 0.96, 1.08, 1.2, 1.32, 1.44, 1.56),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 15, 14, 13]
}

[sub_resource type="Animation" id="Animation_jrn7x"]
resource_name = "idle_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [39, 40, 41, 42]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RayCast2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 0,
"values": [Vector2(-1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RayCast2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 0,
"values": [Vector2(-28, 0)]
}

[sub_resource type="Animation" id="Animation_q82e1"]
resource_name = "idle_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [39, 40, 41, 42]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RayCast2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RayCast2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1e-05),
"update": 0,
"values": [Vector2(28, 0)]
}

[sub_resource type="Animation" id="Animation_jx1yq"]
resource_name = "death"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 23, 24, 25]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_h3sue"]
resource_name = "hurt_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [52, 53, 54]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_amp8d"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tfl3l"]
_data = {
"RESET": SubResource("Animation_amp8d"),
"attack_left": SubResource("Animation_o3l7u"),
"dead_alive": SubResource("Animation_nou1p"),
"death": SubResource("Animation_jx1yq"),
"hurt_left": SubResource("Animation_h3sue"),
"idle_left": SubResource("Animation_jrn7x"),
"idle_right": SubResource("Animation_q82e1")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jcjnn"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_awlpn"]
animation = &"dead_alive"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dy5nb"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ojupk"]
animation = &"hurt_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1af63"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aqbr7"]
animation = &"idle_right"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kv4i0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6j0va"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w8dxp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ypqd8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_evycb"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_66ddp"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_witn6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_02ybl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oaeop"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0c2pt"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_717ce"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3hb6s"]
states/attack_left/node = SubResource("AnimationNodeAnimation_jcjnn")
states/attack_left/position = Vector2(677, 173)
states/dead_alive/node = SubResource("AnimationNodeAnimation_awlpn")
states/dead_alive/position = Vector2(402, 100)
states/death/node = SubResource("AnimationNodeAnimation_dy5nb")
states/death/position = Vector2(736, 103)
states/hurt_left/node = SubResource("AnimationNodeAnimation_ojupk")
states/hurt_left/position = Vector2(634, 242)
states/idle_left/node = SubResource("AnimationNodeAnimation_1af63")
states/idle_left/position = Vector2(526, 173)
states/idle_right/node = SubResource("AnimationNodeAnimation_aqbr7")
states/idle_right/position = Vector2(548, 100)
transitions = ["Start", "dead_alive", SubResource("AnimationNodeStateMachineTransition_kv4i0"), "idle_left", "idle_right", SubResource("AnimationNodeStateMachineTransition_6j0va"), "idle_right", "idle_left", SubResource("AnimationNodeStateMachineTransition_w8dxp"), "idle_left", "attack_left", SubResource("AnimationNodeStateMachineTransition_ypqd8"), "dead_alive", "idle_right", SubResource("AnimationNodeStateMachineTransition_evycb"), "attack_left", "idle_left", SubResource("AnimationNodeStateMachineTransition_66ddp"), "idle_left", "death", SubResource("AnimationNodeStateMachineTransition_witn6"), "attack_left", "death", SubResource("AnimationNodeStateMachineTransition_02ybl"), "death", "End", SubResource("AnimationNodeStateMachineTransition_oaeop"), "idle_left", "hurt_left", SubResource("AnimationNodeStateMachineTransition_0c2pt"), "hurt_left", "idle_left", SubResource("AnimationNodeStateMachineTransition_717ce")]
graph_offset = Vector2(-74, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owmao"]
size = Vector2(20, 32)

[node name="SkeletonCharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_esgbh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fxeo2")
hframes = 13
vframes = 5
frame = 25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_i6met")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tfl3l")
}

[node name="Damageable" type="Node" parent="."]
script = ExtResource("2_co88d")
health = 30.0

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_tfl3l")
}
tree_root = SubResource("AnimationNodeStateMachine_3hb6s")
anim_player = NodePath("../AnimationPlayer")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-28, 0)
scale = Vector2(-1, 1)
exclude_parent = false
target_position = Vector2(100, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="MaceArea2D" type="Area2D" parent="."]
position = Vector2(-21, 0)
script = ExtResource("4_n57gc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MaceArea2D"]
position = Vector2(4, -2)
shape = SubResource("RectangleShape2D_owmao")

[connection signal="dying" from="Damageable" to="." method="_on_damageable_dying"]
[connection signal="onHit" from="Damageable" to="." method="_on_damageable_on_hit"]
[connection signal="animation_finished" from="AnimationTree" to="Damageable" method="_on_animation_tree_animation_finished"]
